Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <div class="main-visual">
-         <img src="my.website/images/main.jpg" alt="メイン" class="main-image">
+         <img src="images/main.jpg" alt="メイン" class="main-image">
          <img src="images/main_text.png" alt="重ねる画像" class="overlay-image">
     </div>
 
@@ -128,3 +128,4 @@
 </body>
 
 </html>
+
